# easy-tactics

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  env.example
api/: go.mod  go.sum  handlers.go  handlers_test.go  main.go  main_test.go
api/ai/: client.go
api/database/: migration_runner.go
api/domain/: fighter.go  fighter_test.go  user.go  user_test.go
api/handlers/: auth_handler.go  auth_handler_test.go  fight_handler.go  fight_handler_test.go  fighter_handler.go  fighter_handler_test.go  tournament_handler.go  tournament_handler_test.go
api/proto/: ai-service.proto  fighter-agent.proto  generate.go
api/storage/: fighter_storage.go  fighter_storage_test.go  user_storage.go  (+1 more)
bot/: go.mod  go.sum  main.go
docs/: 2026-05-01-fighter-knowledge-agent-design.md  2026-05-01-fighter-knowledge-agent-grpc-api.md  fighter-agent.proto
migrations/: 001_create_users.sql  001_create_users_table.sql  002_create_fighters_table.sql  002_create_fighters_tournaments_fights.sql  003_create_tournaments_table.sql
python/ai-service/: .env.example  ai_service_pb2.py  ai_service_pb2_grpc.py  main.py  pyproject.toml  requirements.txt  server.py
python/ai-service/app/: __init__.py  load_user_data.py  read_user_data.py
python/ai-service/llm/: __init__.py  deepseek_client.py
python/ai-service/prompts/: strcture_loaded_user_data.md
python/ai-service/store/: __init__.py  profile.py
python/ai-service/tests/: test_load_user_data.py  test_storage.py
python/hemagon/: main.py  mcp.py  pyproject.toml
python/hemagon/app/: parse_user_profile.py
(+19 files in other folders)
