[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "AI service for fighter analysis"
authors = ["Easy Tactics Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.60.0"
protobuf = "^4.25.0"
google-api-python-client = "^2.120.0"
anthropic = "^0.18.0"
python-dotenv = "^1.0.0"
grpcio-tools = "^1.60.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"