[tool.poetry]
name = "hemagon-mcp"
version = "0.1.0"
description = "MCP server for Hemagon fencing database"
authors = ["Easy Tactics Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"